--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
-    <string name="app_name">MemeFire</string>
-    <!-- TODO: Remove or change this placeholder text -->
+    <string name="app_name">MemeShare</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="don_t_have_account_sign_up_here"><u>Don\'t have account? Sign Up Here</u></string>
+    <string name="have_account_login"><u>Have account? Login</u></string>
 </resources>
